--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
   <!-- Basic -->
@@ -10,14 +10,15 @@
   <!-- Site Metas -->
   <link rel="icon" href="images/fevicon.png" type="image/gif" />
   <meta name="keywords" content="" />
-  <meta name="description" content="" />
+  <meta name="description" content="Test web" />
   <meta name="author" content="" />
-
+  <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
   <title>Hostit</title>
 
 
   <!-- bootstrap core css -->
-  <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
+  <!-- <link rel="stylesheet" type="text/css" href="css/bootstrap.css" /> -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
   <!-- fonts style -->
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
@@ -67,7 +68,7 @@
             </ul>
             <div class="quote_btn-container">
               <form class="form-inline">
-                <button class="btn   nav_search-btn" type="submit">
+                <button class="btn   nav_search-btn" title="Search btn" type="submit">
                   <i class="fa fa-search" aria-hidden="true"></i>
                 </button>
               </form>
@@ -728,16 +729,16 @@
             </div>
           </div>
           <div class="info_social">
-            <a href="">
+            <a href="" aria-label="facebook">
               <i class="fa fa-facebook" aria-hidden="true"></i>
             </a>
-            <a href="">
+            <a href="" aria-label="twitter">
               <i class="fa fa-twitter" aria-hidden="true"></i>
             </a>
-            <a href="">
+            <a href="" aria-label="linkedin">
               <i class="fa fa-linkedin" aria-hidden="true"></i>
             </a>
-            <a href="">
+            <a href="" aria-label="instagram">
               <i class="fa fa-instagram" aria-hidden="true"></i>
             </a>
           </div>
@@ -810,10 +811,11 @@
   </footer>
   <!-- footer section -->
 
-  <!-- jQery -->
-  <script src="js/jquery-3.4.1.min.js"></script>
+  <!-- jQery
+  <script src="js/jquery-3.4.1.min.js"></script> -->
   <!-- bootstrap js -->
-  <script src="js/bootstrap.js"></script>
+  <!-- <script src="js/bootstrap.js"></script> -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   <!-- custom js -->
   <script src="js/custom.js"></script>
 
