--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
             <img src="images/server-img.jpg" alt="">
             <div class="play_btn">
               <button>
-                <i class="fa fa-play" aria-hidden="true"></i>
+                <i class="fa fa-play" aria-hidden="true" title="video"></i>
               </button>
             </div>
           </div>
