--- a/index.html
+++ b/index.html
@@ -370,8 +370,8 @@
           <div class="img-box">
             <img src="images/server-img.jpg" alt="">
             <div class="play_btn">
-              <button>
-                <i class="fa fa-play" aria-hidden="true" title="video"></i>
+              <button title="video">
+                <i class="fa fa-play" aria-hidden="true" ></i>
               </button>
             </div>
           </div>
